<resources>
    <string name="app_name">PMA</string>
    <string name="action_settings">Podešavanja</string>
    <string name="notification">Obaveštenja</string>
    <string name="settings">Podešavanja</string>
    <string name="favourites">Omiljene rute</string>
    <string name='all_routs'>Sve rute</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Podešavanja</string>

    <string name="location_header">Lokacija</string>
    <string name="alarm_header">Podsetnik</string>

    <string name="signature_title">Your signature</string>
    <string name="city_title">Izaberi grad</string>

    <!-- Sync Preferences -->
    <string name="alarm_title">Uključi alarm</string>
    <string name="time_distance_title">Vremenska udaljenost autobusa</string>
    <string name="distance_title">Udaljenost autobusa u kilometrima</string>

    <string name="title_item_detail">Detalji rute</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <!-- Spinner -->
    <string-array name="spinner_days">
        <item>Radni dan</item>
        <item>Subota</item>
        <item>Nedelja</item>
    </string-array>

    <!-- Activity route detail -->
    <string name="more_info">Više informacija</string>
    <string name="your_location">Tvoja lokacija</string>
    <string name="work_for">Šetaj 9 min (0.5 mi)</string>
    <string name="bus_stop_name">Naziv stanice</string>
    <string name="time">12:33</string>
    <string name="timetable">Raspored polazaka</string>

    <!-- Activity time table -->
    <string name="day">Dan:</string>

    <!-- Custom info window -->
    <string name="some_text">some text</string>
</resources>
