<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/location_header">

        <ListPreference
            app:defaultValue="city"
            app:entries="@array/city_entries"
            app:entryValues="@array/city_values"
            app:key="city"
            app:title="@string/city_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/alarm_header">

        <SwitchPreferenceCompat
            app:key="alarm"
            app:title="@string/alarm_title" />

        <ListPreference
            android:dependency="alarm"
            app:defaultValue="time_distance"
            app:entries="@array/time_entries"
            app:entryValues="@array/time_values"
            app:key="time"
            app:title="@string/time_distance_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="alarm"
            app:key="distance_meters"
            app:title="@string/distance_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
